# rag-your-notion

./: .gitignore  README.md  pyproject.toml
src/: chat.py  load_docs.py  main.py  retriever.py
